--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Daniel's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://nbviewer.org/github/DaniWS/cv_pdf/blob/gh-pages/DanielVilelaGarciaCV3.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/DaniWS/cv_pdf/raw/gh-pages/DanielVilelaGarciaCV3.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
